Bug 292617 - KMail crashes after regular closing
Summary: KMail crashes after regular closing
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-27 18:03 UTC by Sascha Manns
Modified: 2012-01-31 23:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sascha Manns 2012-01-27 18:03:29 UTC
Application: kontact (4.8.0)
KDE Platform Version: 4.8.00 (4.8.0 "release 462"
Qt Version: 4.8.0
Operating System: Linux 3.1.0-1.2-default x86_64
Distribution: "Balsam Professional 12.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:
I've just closed the App through the cross from WM. Then comes up the crash.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fbd5c438760 (LWP 21353))]

Thread 8 (Thread 0x7fbd43d36700 (LWP 21354)):
#0  0x00007fbd542d7e6c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fbd58c63c12 in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007fbd58c63c49 in ?? () from /usr/lib64/libQtWebKit.so.4
#3  0x00007fbd542d3f05 in start_thread () from /lib64/libpthread.so.0
#4  0x00007fbd5995363d in clone () from /lib64/libc.so.6

Thread 7 (Thread 0x7fbd4341d700 (LWP 21357)):
#0  0x00007fbd542d8e83 in pthread_getspecific () from /lib64/libpthread.so.0
#1  0x00007fbd53deaedd in g_thread_self () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fbd53dc3140 in g_main_context_acquire () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fbd53dc48b1 in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fbd53dc4f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fbd5a0c1956 in QEventDispatcherGlib::processEvents (this=0x7fbd3c0008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00007fbd5a091682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00007fbd5a0918d7 in QEventLoop::exec (this=0x7fbd4341ce20, flags=...) at kernel/qeventloop.cpp:204
#8  0x00007fbd59f92537 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00007fbd59f9555b in QThreadPrivate::start (arg=0x83f160) at thread/qthread_unix.cpp:298
#10 0x00007fbd542d3f05 in start_thread () from /lib64/libpthread.so.0
#11 0x00007fbd5995363d in clone () from /lib64/libc.so.6

Thread 6 (Thread 0x7fbce17fa700 (LWP 27003)):
#0  0x00007fbd542d6014 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x00007fbd53dc3369 in g_main_context_release () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fbd53dc4aca in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fbd53dc4f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fbd5a0c1956 in QEventDispatcherGlib::processEvents (this=0x7fbcd00008c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fbd5a091682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fbd5a0918d7 in QEventLoop::exec (this=0x7fbce17f9e20, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fbd59f92537 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fbd59f9555b in QThreadPrivate::start (arg=0x8ba4ce0) at thread/qthread_unix.cpp:298
#9  0x00007fbd542d3f05 in start_thread () from /lib64/libpthread.so.0
#10 0x00007fbd5995363d in clone () from /lib64/libc.so.6

Thread 5 (Thread 0x7fbce3fff700 (LWP 433)):
#0  0x00007fbd542d7e6c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fbcbea17c01 in queue_processor(void*) () from /usr/lib64/IcedTeaPlugin.so
#2  0x00007fbd542d3f05 in start_thread () from /lib64/libpthread.so.0
#3  0x00007fbd5995363d in clone () from /lib64/libc.so.6

Thread 4 (Thread 0x7fbcbe9f2700 (LWP 434)):
#0  0x00007fbd542d7e6c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fbcbea17c01 in queue_processor(void*) () from /usr/lib64/IcedTeaPlugin.so
#2  0x00007fbd542d3f05 in start_thread () from /lib64/libpthread.so.0
#3  0x00007fbd5995363d in clone () from /lib64/libc.so.6

Thread 3 (Thread 0x7fbcbe1f1700 (LWP 435)):
#0  0x00007fbd542d7e6c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fbcbea17c01 in queue_processor(void*) () from /usr/lib64/IcedTeaPlugin.so
#2  0x00007fbd542d3f05 in start_thread () from /lib64/libpthread.so.0
#3  0x00007fbd5995363d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fbcf5ca8700 (LWP 1509)):
#0  0x00007fbd5994a523 in poll () from /lib64/libc.so.6
#1  0x00007fbd53dc4a98 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fbd53dc4f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fbd5a0c1956 in QEventDispatcherGlib::processEvents (this=0x7fbcf0026f20, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fbd5a091682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fbd5a0918d7 in QEventLoop::exec (this=0x7fbcf5ca7df0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fbd59f92537 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fbd5a07148f in QInotifyFileSystemWatcherEngine::run (this=0xfa908f0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fbd59f9555b in QThreadPrivate::start (arg=0xfa908f0) at thread/qthread_unix.cpp:298
#9  0x00007fbd542d3f05 in start_thread () from /lib64/libpthread.so.0
#10 0x00007fbd5995363d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fbd5c438760 (LWP 21353)):
[KCrash Handler]
#6  0x000000000a7be3f0 in ?? ()
#7  0x00007fbcfa7a1a31 in MailCommon::Util::fullCollectionPath (collection=...) at /usr/src/debug/kdepim-4.8.0/mailcommon/mailutil.cpp:109
#8  0x00007fbcfa7905f7 in MailCommon::FolderRequester::setCollectionFullPath (this=0x1071e3c0, col=<optimized out>) at /usr/src/debug/kdepim-4.8.0/mailcommon/folderrequester.cpp:109
#9  0x00007fbcfa79074b in MailCommon::FolderRequester::setCollection (this=0x1071e3c0, collection=<optimized out>) at /usr/src/debug/kdepim-4.8.0/mailcommon/folderrequester.cpp:117
#10 0x00007fbcfa782b6b in MailCommon::FilterActionWidget::setAction (this=0xe1ce20, action=0xf267f70) at /usr/src/debug/kdepim-4.8.0/mailcommon/filteractionwidget.cpp:202
#11 0x00007fbcfa783d9f in MailCommon::FilterActionWidgetLister::setActionList (this=0xf07bf00, list=<optimized out>) at /usr/src/debug/kdepim-4.8.0/mailcommon/filteractionwidget.cpp:323
#12 0x00007fbcfa7d6b02 in MailCommon::KMFilterDialog::slotFilterSelected (this=0xec9c8d0, aFilter=0xe7fc9a0) at /usr/src/debug/kdepim-4.8.0/mailcommon/kmfilterdialog.cpp:557
#13 0x00007fbd5a0a6761 in QMetaObject::activate (sender=0xf9e09b0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffff786b0) at kernel/qobject.cpp:3556
#14 0x00007fbcfa7d4fcf in MailCommon::KMFilterListBox::filterSelected (this=<optimized out>, _t1=0xe7fc9a0) at /usr/src/debug/kdepim-4.8.0/build/mailcommon/kmfilterdialog.moc:153
#15 0x00007fbcfa7d5040 in MailCommon::KMFilterListBox::slotSelected (this=0xf9e09b0, aIdx=3) at /usr/src/debug/kdepim-4.8.0/mailcommon/kmfilterdialog.cpp:1014
#16 0x00007fbcfa7dadfe in MailCommon::KMFilterListBox::slotApplyFilterChanges (this=0xf9e09b0, button=<optimized out>) at /usr/src/debug/kdepim-4.8.0/mailcommon/kmfilterdialog.cpp:948
#17 0x00007fbd5a0a6761 in QMetaObject::activate (sender=0xec9c8d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffff78850) at kernel/qobject.cpp:3556
#18 0x00007fbd5b73f1f1 in KDialog::buttonClicked (this=<optimized out>, _t1=KDialog::Ok) at /usr/src/debug/kdelibs-4.8.0/build/kdeui/kdialog.moc:303
#19 0x00007fbd5b73f5f2 in KDialog::slotButtonClicked (this=0xec9c8d0, button=4) at /usr/src/debug/kdelibs-4.8.0/kdeui/dialogs/kdialog.cpp:880
#20 0x00007fbd5b73fc44 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/build/kdeui/kdialog.moc:167
#21 KDialog::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kdelibs-4.8.0/build/kdeui/kdialog.moc:127
#22 0x00007fbd5a0a6761 in QMetaObject::activate (sender=0xed9a4c0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffff78a00) at kernel/qobject.cpp:3556
#23 0x00007fbd5a0ae01e in QSignalMapper::mapped (this=<optimized out>, _t1=4) at .moc/release-shared/moc_qsignalmapper.cpp:115
#24 0x00007fbd5a0ae5bb in QSignalMapper::map (this=0xed9a4c0, sender=0x1071c160) at kernel/qsignalmapper.cpp:266
#25 0x00007fbd5a0a6761 in QMetaObject::activate (sender=0x1071c160, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffffff78b90) at kernel/qobject.cpp:3556
#26 0x00007fbd5b130c22 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#27 0x00007fbd5ae6fcce in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#28 0x00007fbd5ae7100b in QAbstractButtonPrivate::click (this=0x104383a0) at widgets/qabstractbutton.cpp:539
#29 0x00007fbd5ae7127c in QAbstractButton::mouseReleaseEvent (this=0x1071c160, e=0x7ffffff79460) at widgets/qabstractbutton.cpp:1121
#30 0x00007fbd5aaf6594 in QWidget::event (this=0x1071c160, event=0x7ffffff79460) at kernel/qwidget.cpp:8361
#31 0x00007fbd5aaa5e84 in notify_helper (e=0x7ffffff79460, receiver=0x1071c160, this=0x6385b0) at kernel/qapplication.cpp:4550
#32 QApplicationPrivate::notify_helper (this=0x6385b0, receiver=0x1071c160, e=0x7ffffff79460) at kernel/qapplication.cpp:4522
#33 0x00007fbd5aaab5d3 in QApplication::notify (this=<optimized out>, receiver=0x1071c160, e=0x7ffffff79460) at kernel/qapplication.cpp:4093
#34 0x00007fbd5b7e9786 in KApplication::notify (this=0x7ffffff7a160, receiver=0x1071c160, event=0x7ffffff79460) at /usr/src/debug/kdelibs-4.8.0/kdeui/kernel/kapplication.cpp:311
#35 0x00007fbd5a09289c in QCoreApplication::notifyInternal (this=0x7ffffff7a160, receiver=0x1071c160, event=0x7ffffff79460) at kernel/qcoreapplication.cpp:876
#36 0x00007fbd5aaa6e52 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:231
#37 QApplicationPrivate::sendMouseEvent (receiver=0x1071c160, event=0x7ffffff79460, alienWidget=0x1071c160, nativeWidget=0xe8f9fb0, buttonDown=0x1071c160, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3161
#38 0x00007fbd5ab22c05 in QETWidget::translateMouseEvent (this=0xe8f9fb0, event=<optimized out>) at kernel/qapplication_x11.cpp:4505
#39 0x00007fbd5ab21aca in QApplication::x11ProcessEvent (this=0x7ffffff7a160, event=0x7ffffff79d20) at kernel/qapplication_x11.cpp:3631
#40 0x00007fbd5ab49652 in x11EventSourceDispatch (s=0x64cd90, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#41 0x00007fbd53dc458d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#42 0x00007fbd53dc4d88 in ?? () from /usr/lib64/libglib-2.0.so.0
#43 0x00007fbd53dc4f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#44 0x00007fbd5a0c18ef in QEventDispatcherGlib::processEvents (this=0x60d320, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#45 0x00007fbd5ab492de in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#46 0x00007fbd5a091682 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#47 0x00007fbd5a0918d7 in QEventLoop::exec (this=0x7ffffff7a0f0, flags=...) at kernel/qeventloop.cpp:204
#48 0x00007fbd5a096435 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#49 0x0000000000403919 in ?? ()
#50 0x00007fbd5989b23d in __libc_start_main () from /lib64/libc.so.6
#51 0x0000000000403e51 in _start ()

Reported using DrKonqi
Comment 1 Allen Winter 2012-01-31 23:02:56 UTC
Git commit 85d050bf2bd1bbe8e73ee2775a6b0248cdc746dc by Allen Winter.
Committed on 01/02/2012 at 00:01.
Pushed by winterz into branch 'master'.

in setCollectionFullPath(), don't try to get the fullCollectionPath
from the Akonadi::Collection specified unless we have collectionModel
in the kernel.
MERGE: 4.8
FIXED-IN: 4.8.1

M  +4    -2    mailcommon/folderrequester.cpp

http://commits.kde.org/kdepim/85d050bf2bd1bbe8e73ee2775a6b0248cdc746dc
Comment 2 Allen Winter 2012-01-31 23:03:32 UTC
Git commit 54d1ac4fb1d45a155a5dc3750cc2e5815843b659 by Allen Winter.
Committed on 01/02/2012 at 00:01.
Pushed by winterz into branch 'KDE/4.8'.

in setCollectionFullPath(), don't try to get the fullCollectionPath
from the Akonadi::Collection specified unless we have collectionModel
in the kernel.
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit 85d050bf2bd1bbe8e73ee2775a6b0248cdc746dc)

M  +4    -2    mailcommon/folderrequester.cpp

http://commits.kde.org/kdepim/54d1ac4fb1d45a155a5dc3750cc2e5815843b659