in setCollectionFullPath(), don't try to get the fullCollectionPath from the Akonadi::Collection specified unless we have collectionModel in the kernel.

BUG: 292617
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit 85d050bf2bd1bbe8e73ee2775a6b0248cdc746dc)